--- a/z/zo/zoo/zoogstercostumes.com.html
+++ b/z/zo/zoo/zoogstercostumes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zoogstercostumes.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022232id_/http%3A//www.zoogstercostumes.com/security.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zoogstercostumes.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616154458id_/http%3A//www.zoogstercostumes.com/security.html) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/zoogstercostumes.dwt" codeOutsideHTMLIsLocked="false" --><head><!-- InstanceBeginEditable name="metas" -->
 <title>Your Privacy &amp; Security</title>
@@ -65,7 +65,6 @@ Because we believe the security of your credit card information to be of the utm
 <a href="../landing/60s.php">60s Costumes</a><br>
 <a href="../landing/70s.php">70s Costumes</a><br>
 <a href="../landing/80s.php">80s Costumes</a><br>
-<a href="../landing/adult.php">Adult Costumes</a><br>
 <a href="../landing/aliceinwonderland.php">Alice In Wonderland</a><br>
 <a href="../landing/angel.php">Angel Costumes</a><br>
 <a href="../landing/animal.php">Animal Costumes</a><br>
@@ -89,10 +88,10 @@ Because we believe the security of your credit card information to be of the utm
 <a href="../landing/dinosaur.php">Dinosaur Costumes</a><br>
 <a href="../landing/disco.php">Disco Costumes</a><br>
 <a href="../landing/dorothy.php">Dorothy Costumes</a><br>
-<a href="../landing/egyptian.php">Egyptian Costumes</a>
+<a href="../landing/egyptian.php">Egyptian Costumes</a><br>
+<a href="../landing/elvis.php">Elvis Costumes</a>
   </td>
   <td width="33%" valign="top" class="bodySmall">			
-<a href="../landing/elvis.php">Elvis Costumes</a><br>
 <a href="../landing/fairy.php">Fairy Costumes</a><br>
 <a href="../landing/fantasy.php">Fantasy Costumes</a><br>
 <a href="../landing/flapper.php">Flapper Costumes</a><br>
@@ -121,10 +120,10 @@ Because we believe the security of your credit card information to be of the utm
 <a href="../landing/monkey.php">Monkey Costumes</a><br>
 <a href="../landing/movie.php">Movie Costumes</a><br>
 <a href="../landing/naughtyhalloween.php">Naughty Costumes</a><br>
-<a href="../landing/ninja.php">Ninja Costumes</a>
+<a href="../landing/ninja.php">Ninja Costumes</a><br>
+<a href="../landing/nurse.php">Nurse Costumes</a>
   </td>
   <td width="33%" valign="top" class="bodySmall">
-<a href="../landing/nurse.php">Nurse Costumes</a><br>
 <a href="../landing/phantomoftheopera.php">Phantom of the Opera</a><br>
 <a href="../landing/pimp.php">Pimp Costumes</a><br>
 <a href="../landing/pirate.php">Pirate Costumes</a><br>
@@ -146,6 +145,7 @@ Because we believe the security of your credit card information to be of the utm
 <a href="../landing/snowwhite.php">Snow White Costumes</a><br>
 <a href="../landing/spiderman.php">Spiderman Costumes</a><br>
 <a href="../landing/starwars.php">Star Wars Costumes</a><br>
+<a href="../landing/stockings.php">Stockings</a><br>
 <a href="../landing/superhero.php">Super Hero Costumes</a><br>
 <a href="../landing/tinkerbell.php">Tinkerbell Costumes</a><br>
 <a href="../landing/vampire.php">Vampire Costumes</a><br>
@@ -156,7 +156,7 @@ Because we believe the security of your credit card information to be of the utm
 <a href="../landing/wonderwoman.php">Wonder Woman</a>
 </td></tr></tbody></table></td><td width="1"><img src="../images/design/pixelOrange.gif" width="1" height="100%"></td></tr></tbody></table><table width="450" height="20" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="20"><img src="../images/design/cornerPopBL.gif" width="20" height="20"></td><td valign="bottom"><img src="../images/design/pixelOrange.gif" width="100%" height="1"></td><td width="20" valign="bottom"><img src="../images/design/cornerPopBR.gif" width="20" height="20"></td></tr></tbody></table></td>
 <td><div align="right"><a href="landing/new.php"><img src="images/design/newHotness.jpg" width="150" height="34" border="0"></a><br>
-<script language="javascript">newHotness();</script><a href="http://www.zoogstercostumes.com/products/ru889430.html"><img border="0" src="http://www.zoogstercostumes.com/images/design/hot-vampire-diaries.jpg" alt="Vampire Diaries Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/mario-and-luigi-costumes.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hotsmb99.jpg" alt="Mario and Luigi Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/katy-perry-costumes-and-wigs.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hotkaty-perry2.jpg" alt="Katy Perry Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/jersey-shore-costumes-and-wigs.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hot-jersey-shore-costumes-banner.jpg" alt="Jersey Shore Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/80s.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hot80s.jpg" alt="80's Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/products/ela7520.html"><img border="0" src="http://www.zoogstercostumes.com/images/design/hotSlash.jpg" alt="Slash Top Hat and Wig" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br></div></td></tr></tbody></table></td></tr></tbody></table></td>
+<script language="javascript">newHotness();</script><a href="http://www.zoogstercostumes.com/landing/katy-perry-costumes-and-wigs.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hotkaty-perry2.jpg" alt="Katy Perry Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/80s.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hot80s.jpg" alt="80's Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/products/ru889430.html"><img border="0" src="http://www.zoogstercostumes.com/images/design/hot-vampire-diaries.jpg" alt="Vampire Diaries Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/products/ela7520.html"><img border="0" src="http://www.zoogstercostumes.com/images/design/hotSlash.jpg" alt="Slash Top Hat and Wig" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/mario-and-luigi-costumes.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hotsmb99.jpg" alt="Mario and Luigi Costumes" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br><a href="http://www.zoogstercostumes.com/landing/new.php"><img border="0" src="http://www.zoogstercostumes.com/images/design/hot2010_4.jpg" alt="New Costumes for 2010" width="150" height="61"></a><br><img src="http://www.zoogstercostumes.com/images/design/pixelWhite.gif" width="150" height="2"><br></div></td></tr></tbody></table></td></tr></tbody></table></td>
 <td width="2" height="2" valign="middle"><img src="images/design/pixelGray.gif" width="1" style="position:relative;top:7px;" height="98%"></td>
 <td height="2" valign="top"><div align="center"><table border="0" align="center" cellpadding="0" cellspacing="0">
 <tbody><tr><td><div align="center"><img src="images/design/clear.gif" width="1" height="5"><br>
@@ -197,7 +197,7 @@ Because we believe the security of your credit card information to be of the utm
 <a href="landing/sexyhalloweencostumes.php">Sexy</a><br>
 <a href="landing/pirate.php">Pirate</a><br>
 <a href="landing/mermaid.php">Mermaid</a><br>
-<a href="landing/new.php">New for 2008</a><br>
+<a href="landing/new.php">New for 2009</a><br>
 <a href="landing/fairy.php">Fairy</a><br>
 <a href="landing/funny.php">Funny</a><br>
 <a href="landing/playboybunny.php">Sexy Bunny</a><br>
