--- a/s/so/som/somd.com.html
+++ b/s/so/som/somd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the somd.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216062115id_/http%3A//www.somd.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the somd.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616154537id_/http%3A//www.somd.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -395,8 +395,11 @@ under which the information was collected.</font></p></td>
 </font></p>
 
 <b></b><p align="center"><b><font size="1" face="Arial,Helvetica">
+Use of any somd.com Web site constitutes acceptance of our 
+<a href="../terms-of-use/index.html">Terms of Use</a> and
+<a href="http://somd.com/privacy/">Privacy Policy</a>.<br>
 Brought to you by <a target="_top" href="http://vei.somd.com">Virtually Everything, Inc.</a>
-&nbsp;&nbsp;©1996-2008, All rights reserved.</font></b><!-- End Standard Footer --></p>
+&nbsp;&nbsp;©1996-2009, All rights reserved.</font></b><!-- End Standard Footer --></p>
 
 <!-- BEGIN HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG --><script language="javascript" src="http://server.iad.liveperson.net/hc/25420556/x.js?cmd=file&amp;file=chatScript3&amp;site=25420556&amp;&amp;category=en;woman;5"> </script><!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
 
@@ -409,7 +412,7 @@ urchinTracker();
 
 </noindex>
 
-<!--webbot bot="Include" i-checksum="25744" endspan -->
+<!--webbot bot="Include" i-checksum="55937" endspan -->
 
 
 
