--- a/h/he/her/herbicepscam.com.html
+++ b/h/he/her/herbicepscam.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the herbicepscam.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011734id_/http%3A//www.herbicepscam.com/index.php%3F_o%3DDefault%26_m%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the herbicepscam.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616154617id_/http%3A//www.herbicepscam.com/index.php%3F_o%3DDefault%26_m%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Herbicepscam</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="keywords" name="keywords" content="">
     <meta http-equiv="description" content="">
-    <style>
-	body {
+<style>
+    body {
 	background-color:			#000000;
 	margin-left: 0px;
 	margin-top: 0px;
@@ -419,8 +419,7 @@ TABLE.thumb TD.status A,DIV { font:8pt Verdana}
 
 .profile_bar a, .profile_bar a:active{ 
 	color: #000000; 
-}	
-</style>
+}</style>
 <!--
 *************************************
 * ie fix js file for flash objects	*
@@ -439,25 +438,24 @@ TABLE.thumb TD.status A,DIV { font:8pt Verdana}
   <tr>
 	<td>
 			<!-- top menu -->
-	<div style="height:16px; text-align:center; vertical-align:middle; margin-bottom:2px" class="top_menu">
-			<a href="index.php?_o=Model&amp;_m=m_list&amp;only_online=0">
-				All Performers</a>	
-         	<a href="index.php?_o=Model&amp;_m=m_list&amp;only_online=1">
-				Who's Online</a>	
-         	<a href="index.php?_o=Buy&amp;_m=buy&amp;payment_method=select">
-				Add Funds</a>	
-         	<a href="index.php?_o=Default&amp;_m=video_rentals">
-				Video Rentals</a>	
-         	<a href="index.php?_o=Model&amp;_m=top10">
-				Top 25 Models</a>	
-         	<a href="index.php?_o=Model&amp;_m=schedule">
-				Model Schedule</a>	
-         	<a href="index.php?_o=Default&amp;_m=help">
-				FAQ</a>	
-         	<a href="index.php?_o=Default&amp;_m=contact">
-				Contact</a>
-	</div>	
-			<!-- end top menu -->
+		<div style="height:16px; text-align:center; vertical-align:middle; margin-bottom:2px" class="top_menu">
+<a href="index.php?_o=Model&amp;_m=m_list&amp;only_online=0">
+    All Performers</a>
+<a href="index.php?_o=Model&amp;_m=m_list&amp;only_online=1">
+    Who's Online</a>
+<a href="index.php?_o=Buy&amp;_m=buy&amp;payment_method=select">
+    Add Funds</a>
+<a href="index.php?_o=Default&amp;_m=video_rentals">
+    Video Rentals</a>
+<a href="index.php?_o=Model&amp;_m=top10">
+    Top 25 Models</a>
+<a href="index.php?_o=Model&amp;_m=schedule">
+    Model Schedule</a>
+<a href="index.php?_o=Default&amp;_m=help">
+    FAQ</a>
+<a href="index.php?_o=Default&amp;_m=contact">
+    Contact</a>
+</div>			<!-- end top menu -->
   	</td> 
 </tr>
 <tr>
@@ -526,7 +524,7 @@ TABLE.thumb TD.status A,DIV { font:8pt Verdana}
 	<td align="center">
 		<table cellpadding="0" cellspacing="2" width="95%">
 	<tbody><tr>
-		<td align="left" style="  background-color:#6BB0B9; padding-left:5px" class="nav" onmouseover="this.className='navRoll'" onmouseout="this.className='nav'">
+		<td align="left" style="  background-color:#6BB0B9; padding-left:5px" class="nav2" onmouseover="this.className='navRoll'" onmouseout="this.className='nav2'">
 <!--			<img src="systems/herbicepscam.com/templates/www/images/star.gif" border="0" height="8" width="9"> -->
 			<a href="index.php?_o=Model&amp;_m=m_list&amp;only_online=0">
 			All Performers</a>
@@ -634,7 +632,7 @@ TABLE.thumb TD.status A,DIV { font:8pt Verdana}
 	  <tr>
 		    <td align="center" valign="top">
 				<div class="bottom_log" align="center">
-				  <div class="copy">© 2008					Herbicepscam				  </div>
+				  <div class="copy">© 2009					Herbicepscam				  </div>
 				  <a href="index.php?_o=Default&amp;_m=compliance"> SECTION 2257</a> &nbsp;|&nbsp;&nbsp;
 				  <a href="index.php?_o=Default&amp;_m=privacy"> Privacy Policy</a>
 		      </div>
@@ -644,7 +642,7 @@ TABLE.thumb TD.status A,DIV { font:8pt Verdana}
 		    <td height="1" align="center" valign="top">
 			<div class="bottom_log1">
 		
-		    	NOTE: Your IP Address <b>67.202.35.13</b> has been logged for our fraud prevention measures.	<br>UNITED STATESTEXAS: AMAZON.COM INC.<br>Script ran for 0.06sec.		    </div>
+		    	NOTE: Your IP Address <b>67.202.55.193</b> has been logged for our fraud prevention measures.	<br>UNITED STATESWASHINGTON: AMAZON.COM INC.<br>Script ran for 0.03sec.		    </div>
 			</td>
 		  </tr>
 </tbody></table>
