--- a/g/go/goe/goemerchant.com.html
+++ b/g/go/goe/goemerchant.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goemerchant.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216234918id_/http%3A//goemerchant.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goemerchant.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616155707id_/http%3A//www.goemerchant.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Statement - GoEmerchant.com</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
