--- a/x/xc/xco/xcoreclub.com.html
+++ b/x/xc/xco/xcoreclub.com.html
@@ -1,19 +1,19 @@
-<!--The following is the downloaded HTML source of the xcoreclub.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216122838id_/http%3A//xcoreclub.com/pp.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xcoreclub.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616160010id_/http%3A//xcoreclub.com/pp.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Privacy Policy</title>
 <link rel="stylesheet" href="/img/style.css" type="text/css">
 </head>
-<body bgcolor="#FFFFFF" text="#000000" background="img/bg.gif" topmargin="0" marginheight="0">
-<table width="970" border="0" cellspacing="0" cellpadding="0" bgcolor="#F4E5C0" height="100%" align="center">
+<body>
+<table width="970" border="0" cellspacing="0" cellpadding="0" bgcolor="#F4E5C0" align="center">
   <tbody><tr>
-<td background="img/border-l.gif" width="5"></td>
+<td style="background-image: url('img/border-l.gif');" width="5"></td>
 <td align="center" valign="top"> 
 <p>
-</p><table width="98%" border="0" cellspacing="0" cellpadding="0" background="img/warn_tbg.gif">
-<tbody><tr>
+</p><table width="98%" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr style="background-image: url('img/warn_tbg.gif');">
 <td><img src="img/warn_t1.gif" width="7" height="13" alt=""></td>
 <td align="right"><img src="img/warn_t2.gif" width="7" height="13" alt=""></td>
 </tr>
@@ -74,7 +74,7 @@
             <p><font face="Arial, Helvetica, sans-serif" size="2">How To Contact 
               Us: <br>
               Should you have other questions or concerns about these privacy 
-              policies, please call us send us an email at <img src="img/post_legal.gif" width="159" height="15"></font></p>
+              policies, please call us send us an email at <img src="img/post_legal.gif" width="159" height="15" alt=""></font></p>
             </td>
         </tr>
       </tbody></table>
@@ -105,8 +105,17 @@ are strictly copyrighted. </p>
 
 </tbody></table>
 </td>
-<td width="5" background="img/border-r.gif"></td>
+<td width="5" style="background-image: url('img/border-r.gif');"></td>
 </tr>
 </tbody></table>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7987784-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </body></html>
