--- a/p/pi/pia/pianoworld.com.html
+++ b/p/pi/pia/pianoworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pianoworld.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217052648id_/http%3A//www.pianoworld.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pianoworld.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616180006id_/http%3A//www.pianoworld.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Privacy Policy - Piano World</title>
@@ -171,7 +171,7 @@ function openNewWindow(url) {
 <form action="http://www.pianoworld.com/cgi-bin/buyit.cgi" method="POST">
 <font face="helvtica,geneva,arial" size="2" color="#FFFFAA"><b>Buy It Online</b></font>
 <br>
-<select name="name" size="2">
+<select name="name">
 <option value="classified">Pianos For Sale</option>
 <option value="sellpiano">Sell your Piano</option>
 <option value="store">Piano Accessories</option>
@@ -258,49 +258,53 @@ function openNewWindow(url) {
 <table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
 <tbody><tr>
 <td bgcolor="#ffffff" class="white" align="center">
-Join our World Famous<br>  <a href="http://www.pianoworld.com/ubb/ubb/ultimatebb.php" title="Piano World Forums">PIANO FORUMS</a> Today! 
+Join our World Famous<br>  <a href="http://www.pianoworld.com/forum" title="Piano World Forums">PIANO FORUMS</a> Today! 
 <br> (It's FREE) 
 </td></tr></tbody></table>
 <p align="center">
 <table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
 <tbody><tr>
 <td bgcolor="#ffffff" class="white" align="center">
-<!--WNG Ad thru Jan 10, 2009-->
+<!--WNG Ad thru May 30, 2009-->
+
 <a href="http://www.wessellnickelandgross.com" target="_blank"><img src="http://www.wessellnickelandgross.com/images/WNG.gif" width="125" height="125" alt="Wessell Nickel and Gross High Performance Piano Action Parts" border="0"></a>
 </td></tr></tbody></table>
 </p>
+<table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
+<tbody><tr>
+<td bgcolor="#ffffff" class="white" align="center">
+<!--Quiescence Ad thru June 30, 2009-->
+<a href="http://www.quiescencemusic.com/" target="_blank">
+<img src="http://www.quiescencemusic.com/newage.png" alt="Click me for a free piano lesson" height="125" width="125"></a>
+</td></tr></tbody></table>
 <p align="center">
 <table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
 <tbody><tr>
 <td bgcolor="#ffffff" class="white" align="center">
-<!-- Lindeblad Ad thru Nov 30-->
-<a href="http://www.lindebladpiano.com" target="_blank"><img src="http://www.lindebladpiano.com/logoBanner.jpg" border="0" alt="Lindeblad Piano Restoration" width="125" height="125"></a>
+<!--30 Day Ad for Pearl River Starts Jan 12, Extend to Aug 2009-->
+<a href="http://www.ritmullerusa.com" target="_blank"><img src="http://www.pearlriverusa.com/images/banner/PR-125x125-Banner1.gif" border="0" width="125" height="125" alt="Ritmuller Pianos"></a> 
 </td></tr></tbody></table>
 </p>
-<p align="center">
-<table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
-<tbody><tr>
-<td bgcolor="#ffffff" class="white" align="center">
-<!-- AC Pianocraft Ad thru Dec 31-->
-<a href="http://www.acpianocraft.com/showroom.asp" target="_blank">
-<img src="http://www.acpianocraft.com/grafx/acpianocraft_ad1.gif" border="0" alt="Pianocraft Piano Restorations" width="125" height="125"></a>
-</td></tr></tbody></table>
-</p>
-<p align="center">
-<table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
-<tbody><tr>
-<td bgcolor="#ffffff" class="white" align="center">
-<!--30 Day Ad for Pearl River Starts Jan 12, Extend to Feb 24 2008-->
-<a href="http://www.pearlriverusa.com" target="_blank"><img src="http://www.pearlriverusa.com/images/banner/PR-125x125-Banner1.gif" border="0"></a> 
-</td></tr></tbody></table>
-</p>
+<!-- Ad thru July 8 2009-->
+<center>
+<a href="http://www.worldwidepiano.com/whats_my_piano_worth.php" target="_blank">
+<img src="http://www.worldwidepiano.com/WYPW2.jpg" height="125" width="125" alt="What's My Piano Worth?" border="0"></a>
+</center>
 
+<!--MOP thru May 28, 2009-->
+<!--
+<center>
+
+<a href="http://www.makeanofferpianos.com" target="_blank">
+<img src="http://www.makeanofferpianos.com/banners/mop_animated.gif" alt="Make An Offer Pianos" width="125" height="125" border="0"></a>
+</center><br>-->
 <table align="center" cellpadding="2" cellspacing="0" border="1" bordercolor="#666633">
 <tbody><tr>
 <td bgcolor="#ffffff" class="body" align="center">
 <a href="http://www.pianoworld.com/Newsletters/">
 <img src="http://www.pianosupplies.com/images/FreeNewsletter6.gif" border="0" alt="Free Piano Newsletter"></a>
 </td></tr></tbody></table>
+<br>
 
 <p align="center">
 <a target="_blank" href="http://www.pianoworld.com/cgi-bin/tellscript/Dotell.cgi" onclick="window.open('http://www.pianoworld.com/cgi-bin/tellscript/Dotell.cgi?referer='+escape(window.location.href),'','width=360,height=390,status=1');return false;"><img src="http://www.pianoworld.com/images/tellafriend.gif" border="0" alt="Tell a friend about Piano World"></a>
@@ -309,9 +313,12 @@ Join our World Famous<br>  <a href="http://www.pianoworld.com/ubb/ubb/ultimatebb
 <table align="center" cellpadding="2" cellspacing="0" border="1" bordercolor="#666633">
 <tbody><tr>
 <td bgcolor="#ffffff" class="body" align="center">
-Need Christmas Music Fast?
 <form action="http://www.musicnotes.com/sheetmusic/ard.asp?SID=718&amp;LID=42" method="post" id="form1" name="form1" target="_blank">
-<table border="0" cellpadding="4" cellspacing="0"><tbody><tr><td width="103" bgcolor="#163B60"><div align="center"><img src="http://www.musicnotes.com/images/mnsms.gif" width="103" height="17" border="0" alt="sheet music search"><br><img src="http://www.musicnotes.com/images/inv.gif" width="2" height="3" border="0" alt="sheet music search"><br><input name="all" size="14" type="TEXT"><br><img src="http://www.musicnotes.com/images/inv.gif" width="2" height="2" border="0" alt="sheet music search"><br><input type="SUBMIT" name="submit" value="find it now!"><br><font color="#FFFFF0" size="1" face="Verdana, Arial, Helvetica, sans-serif">Download &amp; Print Sheet Music Instantly!</font></div></td></tr></tbody></table></form>
+<table border="0" cellpadding="4" cellspacing="0"><tbody><tr><td width="103" bgcolor="#163B60"><div align="center"><img src="http://www.musicnotes.com/images/mnsms.gif" width="103" height="17" border="0" alt="sheet music search">
+<br><img src="http://www.musicnotes.com/images/inv.gif" width="2" height="3" border="0" alt="sheet music search"><br><input name="all" size="14" type="TEXT">
+<br><img src="http://www.musicnotes.com/images/inv.gif" width="2" height="2" border="0" alt="sheet music search">
+<br><input type="SUBMIT" name="submit" value="find it now!">
+<br><font color="#FFFFF0" size="1" face="Verdana, Arial, Helvetica, sans-serif">Download &amp; Print Sheet Music Instantly!</font></div></td></tr></tbody></table></form>
 </td></tr></tbody></table>
 
 <p align="center">
@@ -321,14 +328,17 @@ Need Christmas Music Fast?
 <!-- Begin
 showImage();
 //  End -->
-</script><img src="http://www.pianosupplies.com/Merchant2/graphics/thumbs/thumb_344.jpg"></center><br><a href="http://www.pianosupplies.com/Merchant2/merchant.mvc?Screen=SFNT">In PianoSupplies.com now</a> Our online store
-<br>Piano tuning tools, piano lamps, cushions, benches, polish, metronomes, moving equipment, and other accessories.
+</script><img src="http://www.pianoworld.com/thumbs/thumb_WittnerMetronomes.jpg"></center><br><a href="http://www.pianosupplies.com/Merchant2/merchant.mvc?Screen=SFNT">In PianoSupplies.com now</a> Our online store
+
 <br>
 <b>Free Shipping <a href="http://www.pianosupplies.com/Merchant2/merchant.mvc?Screen=CTGY&amp;Category_Code=Jansen">Jansen Artist Benches!</a></b>
 </td></tr></tbody></table>
 </p>
-
+<table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
+<tbody><tr>
+<td bgcolor="#ffffff" class="white" align="center">
 <a href="http://www.sheetmusicplus.com/a/featured.html?id=16685"><img src="http://gfxa.sheetmusicplus.com/smp_monthpromo_rb.gif" border="0" height="60" width="120" alt="Sheet Music Plus Featured Sale"></a>
+</td></tr></tbody></table>
 <p align="center">
 <table cellpadding="2" cellspacing="0" align="center" border="1" bordercolor="#666633">
 <tbody><tr>
@@ -336,29 +346,15 @@ showImage();
 <a href="http://www.pianoworld.com/grandobsession/"><img src="http://www.pianoworld.com/grandobsession/Grand_Obsession_sm.jpg" border="0"><br>GRAND OBSESSION</a> <br>A Piano Odyssey<br>by Perri Knize
 </td></tr></tbody></table>
 </p>
-
-<p align="center">
-<a href="http://www.amazon.com/exec/obidos/ASIN/9076192367/allaboutpianos">
-TipBook PIANO</a>
-</p>
 <p>
 <script type="text/javascript"><!--
   amazon_ad_tag = "allaboutpianos";  amazon_ad_width = "120";  amazon_ad_height = "240";  amazon_ad_link_target = "new";  amazon_ad_price = "retail";  amazon_ad_include = "piano";  amazon_ad_categories = "abcdf";//--></script>
 <script type="text/javascript" src="http://www.assoc-amazon.com/s/ads.js"></script>
 </p>
-<p>
-
-<table align="center" cellpadding="2" cellspacing="0" border="1" bordercolor="#666633">
-<tbody><tr>
-<td bgcolor="#ffffff" class="body" align="center">
-Add an <a href="http://www.pianoworld.com/rss.htm">RSS Feed</a> of our
-<b>World Famous Piano Forums</b> to your <a href="http://www.pianoworld.com/rss.htm">
-<img src="http://www.pianoworld.com/images/addtomyyahoo.gif" alt="Add to My Yahoo" width="100" height="14" border="0"><br>My Yahoo!</a> <br>account, or to your own web site!
-</td></tr></tbody></table>
 
 <a href="#top"><b>Top</b></a>
 
-</p><p>
+<p>
 
 </p>
 </td>
@@ -428,7 +424,7 @@ data on our own computers and we never share this information with anyone else.
 </p></li><li>We may also use the information we collect to occasionally notify you about important functionality changes to the Web site, new services, and special offers we think you'll find valuable. We will not abuse this privilege. These announcements currently only go out about 2 or 3 times a year. If you never want to receive any announcements or special offers from us, send a e-mail message to <a href="mailto:webmaster@pianoworld.com?Subject=No Emails from Piano World">webmaster@pianoworld.com</a> . (If you use more than one e-mail account with Piano World, send this message from each e-mail account you use.)
 <p></p>
 </li><li>If you would like to keep up with what is happening in the piano industry and on the Piano World Web sites...
-<b>To receive our FREE Piano Newsletters</b> Join our world famous <a href="http://www.pianoworld.com/ubb/ubb/ultimatebb.php">Piano Forums</a> today (they are free too) and automatically receive our free newsletters too.
+<b>To receive our FREE Piano Newsletters</b> Join our world famous <a href="http://www.pianoworld.com/forum">Piano Forums</a> today (they are free too) and automatically receive our free newsletters too.
 </li></ul>
 <p class="subtitlesm">
 How does Piano World protect customer information?
@@ -510,7 +506,7 @@ Piano Classified Ads<br><font face="helvetica,geneva,arial" size="1">
 | <a href="http://www.pianoworld.com/exchange.htm">Pianos For Sale</a> | 
 <a href="https://www.pianoworld.com/placead.htm">Sell Your Piano</a> |
 <br></font><br>
-<b>Join our World Famous <a href="http://www.pianoworld.com/ubb/ubb/ultimatebb.php" title="Piano World Forums">Piano Forums</a> Today!</b> (it's Free)
+<b>Join our World Famous <a href="http://www.pianoworld.com/forum" title="Piano World Forums">Piano Forums</a> Today!</b> (it's Free)
 <br> <br><a target="_blank" href="http://www.pianoworld.com/cgi-bin/tellscript/Dotell.cgi" onclick="window.open('http://www.pianoworld.com/cgi-bin/tellscript/Dotell.cgi?referer='+escape(window.location.href),'','width=360,height=360,status=1');return false;"><img src="http://www.pianoworld.com/images/tellafriend.gif" alt="Tell a friend about Piano World" border="0"></a> &nbsp;
 <!-- AddThis Bookmark Button BEGIN -->
 <a href="http://www.addthis.com/bookmark.php" onclick="window.open('http://www.addthis.com/bookmark.php?pub=PianoWorld&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'addthis', 'scrollbars=yes,menubar=no,width=620,height=520,resizable=yes,toolbar=no,location=no,status=no'); return false;" title="Bookmark this page using any bookmark manager!" target="_blank"><img src="http://www.addthis.com/images/button1-bm.gif" width="125" height="16" border="0" alt="Bookmark this page using any bookmark manager!"></a>
@@ -542,7 +538,7 @@ google_color_url = "008000";
 <a href="http://www.pianoworld.com/">Home</a> | 
 <a href="http://www.pianosupplies.com/Merchant2/merchant.mvc?Screen=SFNT" title="Our online store for Piano and music-related gifts and accessories">Store</a> | 
 <a href="http://www.pianoworld.com/advertising">Advertise</a> | 
-<a href="http://www.pianoworld.com/linktous.htm" title="Please add a link to Piano World on your site">Link to Us</a>  | <a href="http://www.pianoworld.com/ubb/ubb/ultimatebb.php" title="Piano World Forums">Piano Forums</a> |
+<a href="http://www.pianoworld.com/linktous.htm" title="Please add a link to Piano World on your site">Link to Us</a>  | <a href="http://www.pianoworld.com/forum" title="Piano World Forums">Piano Forums</a> |
  <a href="http://www.pianoworld.com/Newsletters/">Free Newsletter</a> |
 <br>|  <a href="http://del.icio.us/post" onclick="window.open('http://del.icio.us/post?v=4&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=700,height=400'); return false;"><img src="http://www.pianosupplies.com/images/delicious.gif" border="0"> Del.icio.us</a> | 
 <a href="http://www.pianoworld.com/contact.htm">Contact</a> | 
@@ -558,7 +554,7 @@ google_color_url = "008000";
 </p><p align="center"><font face="helvetica,geneva,arial" size="1">Piano World
 <br>"Where the World Turns for Information About Pianos"
 <br>
-© Copyright 1997-2008 Piano World All Rights Reserved</font>
+© Copyright 1997-2009 Piano World All Rights Reserved</font>
 
 </p>
 </td></tr></tbody></table>
